sync EXTRA_DIST

--- a/Makefile.am
+++ b/Makefile.am
@@ -17,80 +17,44 @@ EXTRA_DIST =	$(srcdir)/aes_wrap_key_with_pad/botan-diff \
 		$(srcdir)/m4/*.m4 \
 		$(srcdir)/OSX-NOTES.md \
 		$(srcdir)/README.md \
-		$(srcdir)/win32+botan/config.h \
-		$(srcdir)/win32+botan/convarch/convarch.vcxproj \
-		$(srcdir)/win32+botan/convarch/convarch.vcxproj.filters \
-		$(srcdir)/win32+botan/convarch/convarch.vcxproj.user \
-		$(srcdir)/win32+botan/cryptotest/cryptotest.vcxproj \
-		$(srcdir)/win32+botan/cryptotest/cryptotest.vcxproj.filters \
-		$(srcdir)/win32+botan/cryptotest/cryptotest.vcxproj.user \
-		$(srcdir)/win32+botan/datamgrtest/datamgrtest.vcxproj \
-		$(srcdir)/win32+botan/datamgrtest/datamgrtest.vcxproj.filters \
-		$(srcdir)/win32+botan/datamgrtest/datamgrtest.vcxproj.user \
-		$(srcdir)/win32+botan/dump/dump.vcxproj \
-		$(srcdir)/win32+botan/dump/dump.vcxproj.filters \
-		$(srcdir)/win32+botan/dump/dump.vcxproj.user \
-		$(srcdir)/win32+botan/handlemgrtest/handlemgrtest.vcxproj \
-		$(srcdir)/win32+botan/handlemgrtest/handlemgrtest.vcxproj.filters \
-		$(srcdir)/win32+botan/handlemgrtest/handlemgrtest.vcxproj.user \
-		$(srcdir)/win32+botan/keyconv/keyconv.vcxproj \
-		$(srcdir)/win32+botan/keyconv/keyconv.vcxproj.filters \
-		$(srcdir)/win32+botan/keyconv/keyconv.vcxproj.user \
-		$(srcdir)/win32+botan/objstoretest/objstoretest.vcxproj \
-		$(srcdir)/win32+botan/objstoretest/objstoretest.vcxproj.filters \
-		$(srcdir)/win32+botan/objstoretest/objstoretest.vcxproj.user \
-		$(srcdir)/win32+botan/p11test/p11test.vcxproj \
-		$(srcdir)/win32+botan/p11test/p11test.vcxproj.filters \
-		$(srcdir)/win32+botan/p11test/p11test.vcxproj.user \
-		$(srcdir)/win32+botan/sessionmgrtest/sessionmgrtest.vcxproj \
-		$(srcdir)/win32+botan/sessionmgrtest/sessionmgrtest.vcxproj.filters \
-		$(srcdir)/win32+botan/sessionmgrtest/sessionmgrtest.vcxproj.user \
-		$(srcdir)/win32+botan/slotmgrtest/slotmgrtest.vcxproj \
-		$(srcdir)/win32+botan/slotmgrtest/slotmgrtest.vcxproj.filters \
-		$(srcdir)/win32+botan/slotmgrtest/slotmgrtest.vcxproj.user \
-		$(srcdir)/win32+botan/softhsm2/softhsm2.vcxproj \
-		$(srcdir)/win32+botan/softhsm2/softhsm2.vcxproj.filters \
-		$(srcdir)/win32+botan/softhsm2/softhsm2.vcxproj.user \
-		$(srcdir)/win32+botan/softhsm2.sln \
-		$(srcdir)/win32+botan/util/util.vcxproj \
-		$(srcdir)/win32+botan/util/util.vcxproj.filters \
-		$(srcdir)/win32+botan/util/util.vcxproj.user \
-		$(srcdir)/WIN32-NOTES.md \
-		$(srcdir)/win32+openssl/config.h \
-		$(srcdir)/win32+openssl/convarch/convarch.vcxproj \
-		$(srcdir)/win32+openssl/convarch/convarch.vcxproj.filters \
-		$(srcdir)/win32+openssl/convarch/convarch.vcxproj.user \
-		$(srcdir)/win32+openssl/cryptotest/cryptotest.vcxproj \
-		$(srcdir)/win32+openssl/cryptotest/cryptotest.vcxproj.filters \
-		$(srcdir)/win32+openssl/cryptotest/cryptotest.vcxproj.user \
-		$(srcdir)/win32+openssl/datamgrtest/datamgrtest.vcxproj \
-		$(srcdir)/win32+openssl/datamgrtest/datamgrtest.vcxproj.filters \
-		$(srcdir)/win32+openssl/datamgrtest/datamgrtest.vcxproj.user \
-		$(srcdir)/win32+openssl/dump/dump.vcxproj \
-		$(srcdir)/win32+openssl/dump/dump.vcxproj.filters \
-		$(srcdir)/win32+openssl/dump/dump.vcxproj.user \
-		$(srcdir)/win32+openssl/handlemgrtest/handlemgrtest.vcxproj \
-		$(srcdir)/win32+openssl/handlemgrtest/handlemgrtest.vcxproj.filters \
-		$(srcdir)/win32+openssl/handlemgrtest/handlemgrtest.vcxproj.user \
-		$(srcdir)/win32+openssl/keyconv/keyconv.vcxproj \
-		$(srcdir)/win32+openssl/keyconv/keyconv.vcxproj.filters \
-		$(srcdir)/win32+openssl/keyconv/keyconv.vcxproj.user \
-		$(srcdir)/win32+openssl/objstoretest/objstoretest.vcxproj \
-		$(srcdir)/win32+openssl/objstoretest/objstoretest.vcxproj.filters \
-		$(srcdir)/win32+openssl/objstoretest/objstoretest.vcxproj.user \
-		$(srcdir)/win32+openssl/p11test/p11test.vcxproj \
-		$(srcdir)/win32+openssl/p11test/p11test.vcxproj.filters \
-		$(srcdir)/win32+openssl/p11test/p11test.vcxproj.user \
-		$(srcdir)/win32+openssl/sessionmgrtest/sessionmgrtest.vcxproj \
-		$(srcdir)/win32+openssl/sessionmgrtest/sessionmgrtest.vcxproj.filters \
-		$(srcdir)/win32+openssl/sessionmgrtest/sessionmgrtest.vcxproj.user \
-		$(srcdir)/win32+openssl/slotmgrtest/slotmgrtest.vcxproj \
-		$(srcdir)/win32+openssl/slotmgrtest/slotmgrtest.vcxproj.filters \
-		$(srcdir)/win32+openssl/slotmgrtest/slotmgrtest.vcxproj.user \
-		$(srcdir)/win32+openssl/softhsm2/softhsm2.vcxproj \
-		$(srcdir)/win32+openssl/softhsm2/softhsm2.vcxproj.filters \
-		$(srcdir)/win32+openssl/softhsm2/softhsm2.vcxproj.user \
-		$(srcdir)/win32+openssl/softhsm2.sln \
-		$(srcdir)/win32+openssl/util/util.vcxproj \
-		$(srcdir)/win32+openssl/util/util.vcxproj.filters \
-		$(srcdir)/win32+openssl/util/util.vcxproj.user
+		$(srcdir)/win32/config.h.in \
+		$(srcdir)/win32/Configure.pl \
+		$(srcdir)/win32/Configure.py \
+		$(srcdir)/win32/convarch/convarch.vcxproj.in \
+		$(srcdir)/win32/convarch/convarch.vcxproj.filters.in \
+		$(srcdir)/win32/convarch/convarch.vcxproj.user \
+		$(srcdir)/win32/cryptotest/cryptotest.vcxproj.in \
+		$(srcdir)/win32/cryptotest/cryptotest.vcxproj.filters \
+		$(srcdir)/win32/cryptotest/cryptotest.vcxproj.user \
+		$(srcdir)/win32/datamgrtest/datamgrtest.vcxproj.in \
+		$(srcdir)/win32/datamgrtest/datamgrtest.vcxproj.filters \
+		$(srcdir)/win32/datamgrtest/datamgrtest.vcxproj.user \
+		$(srcdir)/win32/dump/dump.vcxproj.in \
+		$(srcdir)/win32/dump/dump.vcxproj.filters \
+		$(srcdir)/win32/dump/dump.vcxproj.user \
+		$(srcdir)/win32/handlemgrtest/handlemgrtest.vcxproj.in \
+		$(srcdir)/win32/handlemgrtest/handlemgrtest.vcxproj.filters \
+		$(srcdir)/win32/handlemgrtest/handlemgrtest.vcxproj.user \
+		$(srcdir)/win32/keyconv/keyconv.vcxproj.in \
+		$(srcdir)/win32/keyconv/keyconv.vcxproj.filters.in \
+		$(srcdir)/win32/keyconv/keyconv.vcxproj.user \
+		$(srcdir)/win32/objstoretest/objstoretest.vcxproj.in \
+		$(srcdir)/win32/objstoretest/objstoretest.vcxproj.filters \
+		$(srcdir)/win32/objstoretest/objstoretest.vcxproj.user \
+		$(srcdir)/win32/p11test/p11test.vcxproj.in \
+		$(srcdir)/win32/p11test/p11test.vcxproj.filters \
+		$(srcdir)/win32/p11test/p11test.vcxproj.user \
+		$(srcdir)/win32/sessionmgrtest/sessionmgrtest.vcxproj.in \
+		$(srcdir)/win32/sessionmgrtest/sessionmgrtest.vcxproj.filters \
+		$(srcdir)/win32/sessionmgrtest/sessionmgrtest.vcxproj.user \
+		$(srcdir)/win32/slotmgrtest/slotmgrtest.vcxproj.in \
+		$(srcdir)/win32/slotmgrtest/slotmgrtest.vcxproj.filters \
+		$(srcdir)/win32/slotmgrtest/slotmgrtest.vcxproj.user \
+		$(srcdir)/win32/softhsm2/softhsm2.vcxproj.in \
+		$(srcdir)/win32/softhsm2/softhsm2.vcxproj.filters \
+		$(srcdir)/win32/softhsm2/softhsm2.vcxproj.user \
+		$(srcdir)/win32/softhsm2.sln.in \
+		$(srcdir)/win32/util/util.vcxproj.in \
+		$(srcdir)/win32/util/util.vcxproj.filters.in \
+		$(srcdir)/win32/util/util.vcxproj.user \
+		$(srcdir)/WIN32-NOTES.md
