SOFTHSM-110: subdir-objects warnings from autoreconf.

--- a/src/bin/migrate/Makefile.am
+++ b/src/bin/migrate/Makefile.am
@@ -8,6 +8,8 @@ dist_man_MANS =		softhsm2-migrate.1
 
 bin_PROGRAMS =		softhsm2-migrate
 
+AUTOMAKE_OPTIONS =	subdir-objects
+
 softhsm2_migrate_SOURCES =	softhsm2-migrate.cpp \
 				../common/getpw.cpp \
 				../common/library.cpp
