--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ compiler:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install build-essential autoconf automake libtool libcppunit-dev libsqlite3-dev sqlite3 libbotan1.10-dev libssl-dev
-script: sh autogen.sh && ./configure --with-crypto-backend=botan --with-botan=/usr --disable-ecc --disable-gost --with-migrate && make check
+script: sh autogen.sh && ./configure --with-crypto-backend=botan --with-botan=/usr --disable-ecc --disable-gost --with-migrate && make all check
