--- a/win32/p11test/p11test.vcxproj.in
+++ b/win32/p11test/p11test.vcxproj.in
@@ -61,13 +61,12 @@
       <AdditionalDependencies>convarch.lib;cppunitd.lib;@LIBNAME@;@EXTRALIBS@%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy ..\..\src\lib\test\softhsm2.conf.win32 ..\..\softhsm2.conf
-mkdir ..\..\tokens 2&gt; nul
-copy ..\..\src\lib\test\tokens\dummy.in ..\..\tokens\dummy
-
-copy ..\..\src\lib\test\softhsm2.conf.win32 ..\..\win32\p11test\softhsm2.conf
-mkdir  ..\..\win32\p11test\tokens 2&gt; nul
-copy ..\..\src\lib\test\tokens\dummy.in  ..\..\win32\p11test\tokens\dummy</Command>
+      <Command>
+copy ..\..\src\lib\test\softhsm2.conf.win32 "$(TargetDir)\softhsm2.conf"
+mkdir "$(TargetDir)\tokens" 2&gt; nul
+copy ..\..\src\lib\test\tokens\dummy.in "$(TargetDir)\tokens\dummy"
+      </Command>
+      <Message>Copying dummy test files to Debug folder</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|@PLATFORM@'">
@@ -90,13 +89,12 @@ copy ..\..\src\lib\test\tokens\dummy.in  ..\..\win32\p11test\tokens\dummy</Comma
       <AdditionalDependencies>convarch.lib;cppunit.lib;@LIBNAME@;@EXTRALIBS@%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy ..\..\src\lib\test\softhsm2.conf.win32 ..\..\softhsm2.conf
-mkdir ..\..\tokens 2&gt; nul
-copy ..\..\src\lib\test\tokens\dummy.in ..\..\tokens\dummy
-
-copy ..\..\src\lib\test\softhsm2.conf.win32 ..\..\win32\p11test\softhsm2.conf
-mkdir  ..\..\win32\p11test\tokens 2&gt; nul
-copy ..\..\src\lib\test\tokens\dummy.in  ..\..\win32\p11test\tokens\dummy</Command>
+      <Command>
+copy ..\..\src\lib\test\softhsm2.conf.win32 "$(TargetDir)\softhsm2.conf"
+mkdir "$(TargetDir)\tokens" 2&gt; nul
+copy ..\..\src\lib\test\tokens\dummy.in "$(TargetDir)\tokens\dummy"
+      </Command>
+      <Message>Copying dummy test files to Release folder</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
