add slots.removable config option

--- a/configure.ac
+++ b/configure.ac
@@ -204,6 +204,7 @@ AC_CONFIG_FILES([
 	src/lib/handle_mgr/test/Makefile
 	src/lib/test/Makefile
 	src/lib/test/softhsm2.conf
+	src/lib/test/softhsm2-alt.conf
 	src/lib/test/tokens/dummy
 	src/bin/Makefile
 	src/bin/common/Makefile
