Issue #171: Problem while closing library that is initialized but improperly finalized.

--- a/src/lib/slot_mgr/test/Makefile.am
+++ b/src/lib/slot_mgr/test/Makefile.am
@@ -8,6 +8,7 @@ AM_CPPFLAGS = 			-I$(srcdir)/.. \
 				-I$(srcdir)/../../object_store \
 				-I$(srcdir)/../../session_mgr \
 				-I$(srcdir)/../../data_mgr \
+				@CRYPTO_INCLUDES@ \
 				`cppunit-config --cflags`
 
 check_PROGRAMS =		slotmgrtest
