--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -7,7 +7,8 @@ AM_CPPFLAGS = 			-I$(srcdir)/cryptoki_compat \
 				-I$(srcdir)/session_mgr \
 				-I$(srcdir)/data_mgr \
 				-I$(srcdir)/handle_mgr \
-				-I$(srcdir)/crypto
+				-I$(srcdir)/crypto \
+				@CRYPTO_INCLUDES@
 
 lib_LTLIBRARIES =		libsofthsm2.la
 
