--- a/src/lib/object_store/test/Makefile.am
+++ b/src/lib/object_store/test/Makefile.am
@@ -8,6 +8,7 @@ AM_CPPFLAGS = 			-I$(srcdir)/.. \
 				-I$(srcdir)/../../data_mgr \
 				-I$(srcdir)/../../session_mgr \
 				-I$(srcdir)/../../slot_mgr \
+				@CRYPTO_INCLUDES@ \
 				`cppunit-config --cflags`
 
 check_PROGRAMS =		objstoretest
