--- a/win32/sessionmgrtest/sessionmgrtest.vcxproj.in
+++ b/win32/sessionmgrtest/sessionmgrtest.vcxproj.in
@@ -20,14 +20,14 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-	<PlatformToolset>v120</PlatformToolset>
+	<PlatformToolset>@PLATFORMTOOLSET@</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|@PLATFORM@'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
-	<PlatformToolset>v120</PlatformToolset>
+	<PlatformToolset>@PLATFORMTOOLSET@</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
