p11 test fixed; C_GetSlotList used to get slot ID after each token initialization. Use of base classes for common methods and members.

--- a/src/lib/test/Makefile.am
+++ b/src/lib/test/Makefile.am
@@ -23,6 +23,8 @@ p11test_SOURCES =		p11test.cpp \
 				SignVerifyTests.cpp \
 				AsymEncryptDecryptTests.cpp \
 				AsymWrapUnwrapTests.cpp \
+				TestsBase.cpp \
+				TestsNoPINInitBase.cpp \
 				../common/osmutex.cpp
 
 p11test_LDADD =			../libsofthsm2.la 
