--- a/win32/convarch/convarch.vcxproj.in
+++ b/win32/convarch/convarch.vcxproj.in
@@ -165,6 +165,7 @@
     <ClCompile Include="..\..\src\lib\common\MutexFactory.cpp" />
     <ClCompile Include="..\..\src\lib\common\osmutex.cpp" />
     <ClCompile Include="..\..\src\lib\common\SimpleConfigLoader.cpp" />
+    <ClCompile Include="..\..\src\lib\crypto\AESKey.cpp" />
     <ClCompile Include="..\..\src\lib\crypto\AsymmetricAlgorithm.cpp" />
     <ClCompile Include="..\..\src\lib\crypto\AsymmetricKeyPair.cpp" />
 @IF BOTAN
