Issue #203: Update the command utils to use the token label or serial to find the token and its slot number.

--- a/src/bin/migrate/Makefile.am
+++ b/src/bin/migrate/Makefile.am
@@ -11,6 +11,7 @@ bin_PROGRAMS =		softhsm2-migrate
 AUTOMAKE_OPTIONS =	subdir-objects
 
 softhsm2_migrate_SOURCES =	softhsm2-migrate.cpp \
+				../common/findslot.cpp \
 				../common/getpw.cpp \
 				../common/library.cpp
 softhsm2_migrate_LDADD =	@SQLITE3_LIBS@ \
