Issue #143: Delete a token using softhsm2-util

--- a/src/bin/util/Makefile.am
+++ b/src/bin/util/Makefile.am
@@ -2,7 +2,13 @@ MAINTAINERCLEANFILES =	$(srcdir)/Makefile.in
 
 AM_CPPFLAGS = 		-I$(srcdir)/../../lib/cryptoki_compat \
 			-I$(srcdir)/../common \
-			@CRYPTO_INCLUDES@
+			-I$(srcdir)/../../lib/ \
+			-I$(srcdir)/../../lib/common \
+			-I$(srcdir)/../../lib/crypto \
+			-I$(srcdir)/../../lib/data_mgr \
+			-I$(srcdir)/../../lib/object_store \
+			@CRYPTO_INCLUDES@ \
+			@SQLITE3_INCLUDES@
 
 dist_man_MANS =		softhsm2-util.1
 
@@ -14,7 +20,10 @@ softhsm2_util_SOURCES =	softhsm2-util.cpp \
 			../common/findslot.cpp \
 			../common/getpw.cpp \
 			../common/library.cpp
-softhsm2_util_LDADD =	@CRYPTO_LIBS@
+
+softhsm2_util_LDADD =	@CRYPTO_LIBS@ \
+			@SQLITE3_LIBS@ \
+			../../lib/libsofthsm_convarch.la
 
 # Compile with support of OpenSSL
 if WITH_OPENSSL
