--- a/win32/p11test/p11test.vcxproj.in
+++ b/win32/p11test/p11test.vcxproj.in
@@ -52,7 +52,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..;..\..\src\lib;..\..\src\lib\cryptoki_compat;..\..\src\lib\common;..\..\src\lib\crypto;..\..\src\lib\object_store;..\..\src\lib\data_mgr;..\..\src\lib\session_mgr;..\..\src\lib\slot_mgr;..\..\src\lib\handle_mgr;..\..\src\lib\win32;@CUINCPATH@;@INCLUDEPATH@;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..;..\..\src\lib;..\..\src\lib\test;..\..\src\lib\cryptoki_compat;..\..\src\lib\common;..\..\src\lib\crypto;..\..\src\lib\object_store;..\..\src\lib\data_mgr;..\..\src\lib\session_mgr;..\..\src\lib\slot_mgr;..\..\src\lib\handle_mgr;..\..\src\lib\win32;@CUINCPATH@;@INCLUDEPATH@;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -79,7 +79,7 @@ copy ..\..\src\lib\test\tokens\dummy.in "$(TargetDir)\tokens\dummy"
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..;..\..\src\lib;..\..\src\lib\cryptoki_compat;..\..\src\lib\common;..\..\src\lib\crypto;..\..\src\lib\object_store;..\..\src\lib\data_mgr;..\..\src\lib\session_mgr;..\..\src\lib\slot_mgr;..\..\src\lib\handle_mgr;..\..\src\lib\win32;@CUINCPATH@;@INCLUDEPATH@;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..;..\..\src\lib;..\..\src\lib\test;..\..\src\lib\cryptoki_compat;..\..\src\lib\common;..\..\src\lib\crypto;..\..\src\lib\object_store;..\..\src\lib\data_mgr;..\..\src\lib\session_mgr;..\..\src\lib\slot_mgr;..\..\src\lib\handle_mgr;..\..\src\lib\win32;@CUINCPATH@;@INCLUDEPATH@;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -118,9 +118,11 @@ copy ..\..\src\lib\test\tokens\dummy.in "$(TargetDir)\tokens\dummy"
     <ClInclude Include="..\..\src\lib\test\SessionTests.h" />
     <ClInclude Include="..\..\src\lib\test\SignVerifyTests.h" />
     <ClInclude Include="..\..\src\lib\test\SymmetricAlgorithmTests.h" />
+    <ClInclude Include="..\..\src\lib\test\TestsBase.h" />
+    <ClInclude Include="..\..\src\lib\test\TestsNoPINInitBase.h" />
     <ClInclude Include="..\..\src\lib\test\TokenTests.h" />
     <ClInclude Include="..\..\src\lib\test\UserTests.h" />
-    <ClInclude Include="..\..\src\lib\test\testconfig.h" />
+    <ClInclude Include="..\..\src\lib\win32\setenv.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\lib\access.cpp" />
@@ -141,6 +143,8 @@ copy ..\..\src\lib\test\tokens\dummy.in "$(TargetDir)\tokens\dummy"
     <ClCompile Include="..\..\src\lib\test\SessionTests.cpp" />
     <ClCompile Include="..\..\src\lib\test\SignVerifyTests.cpp" />
     <ClCompile Include="..\..\src\lib\test\SymmetricAlgorithmTests.cpp" />
+    <ClCompile Include="..\..\src\lib\test\TestsBase.cpp" />
+    <ClCompile Include="..\..\src\lib\test\TestsNoPINInitBase.cpp" />
     <ClCompile Include="..\..\src\lib\test\TokenTests.cpp" />
     <ClCompile Include="..\..\src\lib\test\UserTests.cpp" />
     <ClCompile Include="..\..\src\lib\win32\setenv.cpp" />
