Issue #230: Install p11-kit module file
In order for well-behaved applications to discover and use the PKCS#11
provider module, we should install a p11-kit module file for it.

Allow this to be disabled by configuring with --disable-p11-kit, and do
so in the Jenkins builds since they run as an unprivileged user and
can't install to the standard p11-kit module directory.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,12 @@
 ACLOCAL_AMFLAGS = -I m4
 
+if P11_MODULE_FILE
+p11moddir = $(pk_module_configs)
+p11mod_DATA = softhsm2.module
+endif
+
 MAINTAINERCLEANFILES = \
-        config.log config.status \
+        config.log config.status softhsm2.module \
         $(srcdir)/Makefile.in \
         $(srcdir)/config.h.in $(srcdir)/config.h.in~ \
         $(srcdir)/configure \
