--- a/win32/convarch/convarch.vcxproj.filters.in
+++ b/win32/convarch/convarch.vcxproj.filters.in
@@ -281,6 +281,9 @@
      <ClInclude Include="..\..\src\lib\crypto\OSSLAES.h">
        <Filter>Crypto Header Files</Filter>
      </ClInclude>
+     <ClInclude Include="..\..\src\lib\crypto\OSSLComp.h">
+       <Filter>Crypto Header Files</Filter>
+     </ClInclude>
      <ClInclude Include="..\..\src\lib\crypto\OSSLCryptoFactory.h">
        <Filter>Crypto Header Files</Filter>
      </ClInclude>
@@ -696,6 +699,9 @@
     </ClCompile>
 @IF OPENSSL
      <ClCompile Include="..\..\src\lib\crypto\OSSLAES.cpp">
+       <Filter>Crypto Source Files</Filter>
+     </ClCompile>
+     <ClCompile Include="..\..\src\lib\crypto\OSSLComp.cpp">
        <Filter>Crypto Source Files</Filter>
      </ClCompile>
      <ClCompile Include="..\..\src\lib\crypto\OSSLCryptoFactory.cpp">
