--- a/win32/convarch/convarch.vcxproj.in
+++ b/win32/convarch/convarch.vcxproj.in
@@ -83,6 +83,7 @@
     <ClInclude Include="..\..\src\lib\crypto\odd.h" />
 @IF OPENSSL
      <ClInclude Include="..\..\src\lib\crypto\OSSLAES.h" />
+     <ClInclude Include="..\..\src\lib\crypto\OSSLComp.h" />
      <ClInclude Include="..\..\src\lib\crypto\OSSLCryptoFactory.h" />
      <ClInclude Include="..\..\src\lib\crypto\OSSLDES.h" />
      <ClInclude Include="..\..\src\lib\crypto\OSSLDH.h" />
@@ -227,6 +228,7 @@
     <ClCompile Include="..\..\src\lib\crypto\MacAlgorithm.cpp" />
 @IF OPENSSL
      <ClCompile Include="..\..\src\lib\crypto\OSSLAES.cpp" />
+     <ClCompile Include="..\..\src\lib\crypto\OSSLComp.cpp" />
      <ClCompile Include="..\..\src\lib\crypto\OSSLCryptoFactory.cpp" />
      <ClCompile Include="..\..\src\lib\crypto\OSSLDES.cpp" />
      <ClCompile Include="..\..\src\lib\crypto\OSSLDH.cpp" />
