--- a/softhsm2.module.in
+++ b/softhsm2.module.in
@@ -1,4 +1,4 @@
 # This file describes how to load the pk11 module
 # See: http://p11-glue.freedesktop.org/doc/p11-kit/config.html
 
-module: @libdir@/libsofthsm2.so
+module: @default_softhsm2_lib@
