--- a/configure.ac
+++ b/configure.ac
@@ -7,9 +7,9 @@
 # Program version
 
 define([SOFTHSM_VERSION_MAJOR], [2])
-define([SOFTHSM_VERSION_MINOR], [1])
+define([SOFTHSM_VERSION_MINOR], [2])
 define([SOFTHSM_VERSION_FIX], [0])
-define([PACKAGE_SUFFIX], [])
+define([PACKAGE_SUFFIX], [rc1])
 
 # Library version
 
@@ -20,7 +20,7 @@ define([PACKAGE_SUFFIX], [])
 
 define([SOFTHSM_VERSION_CURRENT], [2])
 define([SOFTHSM_VERSION_AGE], [1])
-define([SOFTHSM_VERSION_REVISION], [1])
+define([SOFTHSM_VERSION_REVISION], [2])
 
 ##################
 #                #
