--- a/src/lib/common/Makefile.am
+++ b/src/lib/common/Makefile.am
@@ -1,9 +1,9 @@
 MAINTAINERCLEANFILES = 		$(srcdir)/Makefile.in
 
-AM_CPPFLAGS =                   -I$(srcdir)/../cryptoki_compat \
+AM_CPPFLAGS =			-I$(srcdir)/.. \
 				-I$(srcdir)/../crypto \
 				-I$(srcdir)/../data_mgr \
-				-I$(srcdir)/..
+				-I$(srcdir)/../pkcs11
 
 noinst_LTLIBRARIES =		libsofthsm_common.la
 libsofthsm_common_la_SOURCES =	Configuration.cpp \
