--- a/src/lib/handle_mgr/test/Makefile.am
+++ b/src/lib/handle_mgr/test/Makefile.am
@@ -3,12 +3,12 @@ MAINTAINERCLEANFILES = 		$(srcdir)/Makefile.in
 AM_CPPFLAGS = 			-I$(srcdir)/.. \
 				-I$(srcdir)/../.. \
 				-I$(srcdir)/../../common \
-				-I$(srcdir)/../../cryptoki_compat \
 				-I$(srcdir)/../../crypto \
+				-I$(srcdir)/../../data_mgr \
 				-I$(srcdir)/../../object_store \
+				-I$(srcdir)/../../pkcs11 \
 				-I$(srcdir)/../../session_mgr \
-				-I$(srcdir)/../../slot_mgr \
-				-I$(srcdir)/../../data_mgr
+				-I$(srcdir)/../../slot_mgr
 
 AM_CFLAGS =			@CPPUNIT_CFLAGS@
 
