--- a/src/lib/session_mgr/Makefile.am
+++ b/src/lib/session_mgr/Makefile.am
@@ -1,12 +1,12 @@
 MAINTAINERCLEANFILES = 			$(srcdir)/Makefile.in
 
-AM_CPPFLAGS =				-I$(srcdir)/../cryptoki_compat \
-					-I$(srcdir)/../slot_mgr \
+AM_CPPFLAGS =				-I$(srcdir)/.. \
+					-I$(srcdir)/../common \
+					-I$(srcdir)/../crypto \
 					-I$(srcdir)/../data_mgr \
 					-I$(srcdir)/../object_store \
-					-I$(srcdir)/../crypto \
-					-I$(srcdir)/../common \
-					-I$(srcdir)/..
+					-I$(srcdir)/../pkcs11 \
+					-I$(srcdir)/../slot_mgr
 
 noinst_LTLIBRARIES =			libsofthsm_sessionmgr.la
 libsofthsm_sessionmgr_la_SOURCES =	SessionManager.cpp \
