--- a/src/lib/slot_mgr/Makefile.am
+++ b/src/lib/slot_mgr/Makefile.am
@@ -1,12 +1,12 @@
 MAINTAINERCLEANFILES = 		$(srcdir)/Makefile.in
 
-AM_CPPFLAGS =			-I$(srcdir)/../cryptoki_compat \
-				-I$(srcdir)/../crypto \
+AM_CPPFLAGS =			-I$(srcdir)/.. \
 				-I$(srcdir)/../common \
+				-I$(srcdir)/../crypto \
 				-I$(srcdir)/../data_mgr \
-				-I$(srcdir)/../session_mgr \
 				-I$(srcdir)/../object_store \
-				-I$(srcdir)/..
+				-I$(srcdir)/../pkcs11 \
+				-I$(srcdir)/../session_mgr
 
 noinst_LTLIBRARIES =		libsofthsm_slotmgr.la
 libsofthsm_slotmgr_la_SOURCES =	SlotManager.cpp \
