--- a/src/bin/keyconv/Makefile.am
+++ b/src/bin/keyconv/Makefile.am
@@ -1,7 +1,7 @@
 MAINTAINERCLEANFILES =	$(srcdir)/Makefile.in
 
-AM_CPPFLAGS =			@CRYPTO_INCLUDES@ \
-				-I$(srcdir)/../../lib/crypto
+AM_CPPFLAGS =			-I$(srcdir)/../../lib/crypto \
+				@CRYPTO_INCLUDES@
 
 dist_man_MANS =			softhsm2-keyconv.1
 
