--- a/src/lib/data_mgr/test/Makefile.am
+++ b/src/lib/data_mgr/test/Makefile.am
@@ -3,9 +3,9 @@ MAINTAINERCLEANFILES = 		$(srcdir)/Makefile.in
 AM_CPPFLAGS = 			-I$(srcdir)/.. \
 				-I$(srcdir)/../.. \
 				-I$(srcdir)/../../common \
-				-I$(srcdir)/../../cryptoki_compat \
 				-I$(srcdir)/../../crypto \
 				-I$(srcdir)/../../object_store \
+				-I$(srcdir)/../../pkcs11 \
 				-I$(srcdir)/../../session_mgr \
 				-I$(srcdir)/../../slot_mgr \
 				@CRYPTO_INCLUDES@
