--- a/src/lib/slot_mgr/test/Makefile.am
+++ b/src/lib/slot_mgr/test/Makefile.am
@@ -3,11 +3,11 @@ MAINTAINERCLEANFILES = 		$(srcdir)/Makefile.in
 AM_CPPFLAGS = 			-I$(srcdir)/.. \
 				-I$(srcdir)/../.. \
 				-I$(srcdir)/../../common \
-				-I$(srcdir)/../../cryptoki_compat \
 				-I$(srcdir)/../../crypto \
-				-I$(srcdir)/../../object_store \
-				-I$(srcdir)/../../session_mgr \
 				-I$(srcdir)/../../data_mgr \
+				-I$(srcdir)/../../object_store \
+				-I$(srcdir)/../../pkcs11 \
+				-I$(srcdir)/../../session_mgr \
 				@CRYPTO_INCLUDES@
 
 AM_CFLAGS =			@CPPUNIT_CFLAGS@
